src/eu/ardel/codscriptizer/astgen/generated/CoDScriptParser.java
package eu.ardel.codscriptizer.astgen.generated;// Generated from C:/Users/Indrek/IdeaProjects/CoDScriptizer/src/eu/ardel/codscriptizer/grammars\CoDScript.g4 by ANTLR 4.4.1-dev
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CoDScriptParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4.1-dev", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Break=1, Case=2, Continue=3, Default=4, Else=5, For=6, If=7, Return=8, 
		Switch=9, While=10, Thread=11, Wait=12, Undefined=13, True=14, False=15, 
		Endon=16, Notify=17, Breakpoint=18, Waittillframeend=19, Waittill=20, 
		Self=21, Level=22, Game=23, LeftParen=24, RightParen=25, LeftBracket=26, 
		RightBracket=27, LeftBrace=28, RightBrace=29, Less=30, LessEqual=31, Greater=32, 
		GreaterEqual=33, LeftShift=34, RightShift=35, Plus=36, PlusPlus=37, Minus=38, 
		MinusMinus=39, Star=40, Div=41, Mod=42, And=43, Or=44, AndAnd=45, OrOr=46, 
		Caret=47, Not=48, Tilde=49, Colon=50, Semi=51, Comma=52, Assign=53, StarAssign=54, 
		DivAssign=55, ModAssign=56, PlusAssign=57, MinusAssign=58, LeftShiftAssign=59, 
		RightShiftAssign=60, AndAssign=61, XorAssign=62, OrAssign=63, Equal=64, 
		NotEqual=65, Dot=66, Backslash=67, Include=68, UsingAnimtree=69, Animtree=70, 
		DeveloperCommentOpen=71, DeveloperCommentClose=72, Identifier=73, IntegerConstant=74, 
		FloatConstant=75, StringLiteral=76, Whitespace=77, Newline=78, BlockComment=79, 
		LineComment=80;
	public static final String[] tokenNames = {
		"<INVALID>", "'break'", "'case'", "'continue'", "'default'", "'else'", 
		"'for'", "'if'", "'return'", "'switch'", "'while'", "'thread'", "'wait'", 
		"'undefined'", "'true'", "'false'", "'endon'", "'notify'", "'breakpoint'", 
		"'waittillframeend'", "'waittill'", "'self'", "'level'", "'game'", "'('", 
		"')'", "'['", "']'", "'{'", "'}'", "'<'", "'<='", "'>'", "'>='", "'<<'", 
		"'>>'", "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'&'", "'|'", 
		"'&&'", "'||'", "'^'", "'!'", "'~'", "':'", "';'", "','", "'='", "'*='", 
		"'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'&='", "'^='", "'|='", 
		"'=='", "'!='", "'.'", "'\\'", "'#include'", "'#using_animtree'", "'#animtree'", 
		"'/#'", "'#/'", "Identifier", "IntegerConstant", "FloatConstant", "StringLiteral", 
		"Whitespace", "Newline", "BlockComment", "LineComment"
	};
	public static final int
		RULE_program = 0, RULE_includeStatement = 1, RULE_usingAnimtreeStatement = 2, 
		RULE_functionDefinition = 3, RULE_outerDeveloperComment = 4, RULE_codeBlock = 5, 
		RULE_innerDeveloperComment = 6, RULE_statement = 7, RULE_terminatedStatement = 8, 
		RULE_optionallyTerminatedStatement = 9, RULE_functionCallStatement = 10, 
		RULE_waitStatement = 11, RULE_returnStatement = 12, RULE_breakStatement = 13, 
		RULE_breakpointStatement = 14, RULE_continueStatement = 15, RULE_waittillframeendStatement = 16, 
		RULE_notifyStatement = 17, RULE_endonStatement = 18, RULE_waittillStatement = 19, 
		RULE_whileLoop = 20, RULE_ifStatement = 21, RULE_forLoop = 22, RULE_vector = 23, 
		RULE_functionPointer = 24, RULE_functionCall = 25, RULE_functionCallTail = 26, 
		RULE_switchStatement = 27, RULE_caseBlock = 28, RULE_switchCase = 29, 
		RULE_incrementDecrement = 30, RULE_assignment = 31, RULE_lvalue = 32, 
		RULE_containerValue = 33, RULE_filePath = 34, RULE_expression = 35, RULE_logicalOrExpression = 36, 
		RULE_logicalAndExpression = 37, RULE_inclusiveOrExpression = 38, RULE_exclusiveOrExpression = 39, 
		RULE_andExpression = 40, RULE_equalityExpression = 41, RULE_relationalExpression = 42, 
		RULE_shiftExpression = 43, RULE_additiveExpression = 44, RULE_multiplicativeExpression = 45, 
		RULE_unaryExpression = 46, RULE_primaryExpression = 47;
	public static final String[] ruleNames = {
		"program", "includeStatement", "usingAnimtreeStatement", "functionDefinition", 
		"outerDeveloperComment", "codeBlock", "innerDeveloperComment", "statement", 
		"terminatedStatement", "optionallyTerminatedStatement", "functionCallStatement", 
		"waitStatement", "returnStatement", "breakStatement", "breakpointStatement", 
		"continueStatement", "waittillframeendStatement", "notifyStatement", "endonStatement", 
		"waittillStatement", "whileLoop", "ifStatement", "forLoop", "vector", 
		"functionPointer", "functionCall", "functionCallTail", "switchStatement", 
		"caseBlock", "switchCase", "incrementDecrement", "assignment", "lvalue", 
		"containerValue", "filePath", "expression", "logicalOrExpression", "logicalAndExpression", 
		"inclusiveOrExpression", "exclusiveOrExpression", "andExpression", "equalityExpression", 
		"relationalExpression", "shiftExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "primaryExpression"
	};

	@Override
	public String getGrammarFileName() { return "CoDScript.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CoDScriptParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public List<IncludeStatementContext> includeStatement() {
			return getRuleContexts(IncludeStatementContext.class);
		}
		public OuterDeveloperCommentContext outerDeveloperComment(int i) {
			return getRuleContext(OuterDeveloperCommentContext.class,i);
		}
		public UsingAnimtreeStatementContext usingAnimtreeStatement(int i) {
			return getRuleContext(UsingAnimtreeStatementContext.class,i);
		}
		public IncludeStatementContext includeStatement(int i) {
			return getRuleContext(IncludeStatementContext.class,i);
		}
		public List<OuterDeveloperCommentContext> outerDeveloperComment() {
			return getRuleContexts(OuterDeveloperCommentContext.class);
		}
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public List<UsingAnimtreeStatementContext> usingAnimtreeStatement() {
			return getRuleContexts(UsingAnimtreeStatementContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoDScriptVisitor ) return ((CoDScriptVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Include) {
				{
				{
				setState(96); includeStatement();
				}
				}
				setState(101);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 69)) & ~0x3f) == 0 && ((1L << (_la - 69)) & ((1L << (UsingAnimtree - 69)) | (1L << (DeveloperCommentOpen - 69)) | (1L << (Identifier - 69)))) != 0)) {
				{
				setState(105);
				switch (_input.LA(1)) {
				case Identifier:
					{
					setState(102); functionDefinition();
					}
					break;
				case DeveloperCommentOpen:
					{
					setState(103); outerDeveloperComment();
					}
					break;
				case UsingAnimtree:
					{
					setState(104); usingAnimtreeStatement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(109);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IncludeStatementContext extends ParserRuleContext {
		public TerminalNode Include() { return getToken(CoDScriptParser.Include, 0); }
		public TerminalNode Semi() { return getToken(CoDScriptParser.Semi, 0); }
		public FilePathContext filePath() {
			return getRuleContext(FilePathContext.class,0);
		}
		public IncludeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_includeStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).enterIncludeStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).exitIncludeStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoDScriptVisitor ) return ((CoDScriptVisitor<? extends T>)visitor).visitIncludeStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IncludeStatementContext includeStatement() throws RecognitionException {
		IncludeStatementContext _localctx = new IncludeStatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_includeStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110); match(Include);
			setState(111); filePath();
			setState(112); match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UsingAnimtreeStatementContext extends ParserRuleContext {
		public TerminalNode Semi() { return getToken(CoDScriptParser.Semi, 0); }
		public TerminalNode LeftParen() { return getToken(CoDScriptParser.LeftParen, 0); }
		public TerminalNode UsingAnimtree() { return getToken(CoDScriptParser.UsingAnimtree, 0); }
		public TerminalNode RightParen() { return getToken(CoDScriptParser.RightParen, 0); }
		public TerminalNode StringLiteral() { return getToken(CoDScriptParser.StringLiteral, 0); }
		public UsingAnimtreeStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_usingAnimtreeStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).enterUsingAnimtreeStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).exitUsingAnimtreeStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoDScriptVisitor ) return ((CoDScriptVisitor<? extends T>)visitor).visitUsingAnimtreeStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UsingAnimtreeStatementContext usingAnimtreeStatement() throws RecognitionException {
		UsingAnimtreeStatementContext _localctx = new UsingAnimtreeStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_usingAnimtreeStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114); match(UsingAnimtree);
			setState(115); match(LeftParen);
			setState(116); match(StringLiteral);
			setState(117); match(RightParen);
			setState(118); match(Semi);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionDefinitionContext extends ParserRuleContext {
		public Token name;
		public TerminalNode LeftParen() { return getToken(CoDScriptParser.LeftParen, 0); }
		public TerminalNode RightParen() { return getToken(CoDScriptParser.RightParen, 0); }
		public TerminalNode Identifier(int i) {
			return getToken(CoDScriptParser.Identifier, i);
		}
		public List<TerminalNode> Identifier() { return getTokens(CoDScriptParser.Identifier); }
		public CodeBlockContext codeBlock() {
			return getRuleContext(CodeBlockContext.class,0);
		}
		public TerminalNode Comma(int i) {
			return getToken(CoDScriptParser.Comma, i);
		}
		public List<TerminalNode> Comma() { return getTokens(CoDScriptParser.Comma); }
		public FunctionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).enterFunctionDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).exitFunctionDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoDScriptVisitor ) return ((CoDScriptVisitor<? extends T>)visitor).visitFunctionDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionDefinitionContext functionDefinition() throws RecognitionException {
		FunctionDefinitionContext _localctx = new FunctionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120); ((FunctionDefinitionContext)_localctx).name = match(Identifier);
			setState(121); match(LeftParen);
			setState(130);
			_la = _input.LA(1);
			if (_la==Identifier) {
				{
				setState(122); match(Identifier);
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==Comma) {
					{
					{
					setState(123); match(Comma);
					setState(124); match(Identifier);
					}
					}
					setState(129);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(132); match(RightParen);
			setState(133); codeBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OuterDeveloperCommentContext extends ParserRuleContext {
		public FunctionDefinitionContext functionDefinition(int i) {
			return getRuleContext(FunctionDefinitionContext.class,i);
		}
		public TerminalNode DeveloperCommentClose() { return getToken(CoDScriptParser.DeveloperCommentClose, 0); }
		public TerminalNode DeveloperCommentOpen() { return getToken(CoDScriptParser.DeveloperCommentOpen, 0); }
		public List<FunctionDefinitionContext> functionDefinition() {
			return getRuleContexts(FunctionDefinitionContext.class);
		}
		public OuterDeveloperCommentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_outerDeveloperComment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).enterOuterDeveloperComment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).exitOuterDeveloperComment(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoDScriptVisitor ) return ((CoDScriptVisitor<? extends T>)visitor).visitOuterDeveloperComment(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OuterDeveloperCommentContext outerDeveloperComment() throws RecognitionException {
		OuterDeveloperCommentContext _localctx = new OuterDeveloperCommentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_outerDeveloperComment);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(135); match(DeveloperCommentOpen);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Identifier) {
				{
				{
				setState(136); functionDefinition();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(142); match(DeveloperCommentClose);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CodeBlockContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public TerminalNode RightBrace() { return getToken(CoDScriptParser.RightBrace, 0); }
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode LeftBrace() { return getToken(CoDScriptParser.LeftBrace, 0); }
		public CodeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_codeBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).enterCodeBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CoDScriptListener ) ((CoDScriptListener)listener).exitCodeBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CoDScriptVisitor ) return ((CoDScriptVisitor<? extends T>)visitor).visitCodeBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CodeBlockContext codeBlock() throws RecognitionException {
		CodeBlockContext _localctx = new CodeBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_codeBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144); match(LeftBrace);
			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Break) | (1L << Continue) | (1L << For) | (1L << If) | (1L << Return) | (1L << Switch) | (1L << While) | (1L << Thread) | (1L << Wait) | (1L << Breakpoint) | (1L << Waittillframeend) | (1L << Self) | (1L << Level) | (1L << Game) | (1L << LeftParen) | (1L << LeftBracket) | (1L << LeftBrace) | (1L << Colon) | (1L << Semi))) != 0) || _la==DeveloperCommentOpen || _la==Identifier) {
				{
				{
				setState(145); statement();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151); match(RightBrace);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
